# smart-ecommerce-bot

./: README.md  pyproject.toml
smart_ecommerce_bot/: electronic_store.db
smart_ecommerce_bot/app/: database.py  dependencies.py  main.py  models.py  schemas.py  seed_data.py
smart_ecommerce_bot/app/routers/: sales_bot.py
