[project]
name = "smart-ecommerce-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.136.3",
    "jsonpatch>=1.33",
    "langchain-google-genai>=4.2.5",
    "nest-asyncio>=1.6.0",
    "pydantic>=2.13.4",
    "sqlmodel>=0.0.38",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.49.0",
]
